--- a/PortfolioWebsite/assets/css/style.css
+++ b/PortfolioWebsite/assets/css/style.css
@@ -355,7 +355,8 @@ footer {
 .project-screenshot {
     max-width: 100%;
     height: auto;
-    border-radius: 8px;
+    border-radius: 05px;
+    margin-top: 45px; /* Adjust this value as needed */
 }
 
 @media (max-width: 768px) {
