added space between sections

--- a/PortfolioWebsite/assets/css/style.css
+++ b/PortfolioWebsite/assets/css/style.css
@@ -393,3 +393,7 @@ footer {
     background: var(--color-accent);
     border-radius: 5px;
 }
+
+.experience + .experience {
+    margin-top: -50px !important; /* Remove extra space between Experience and Education sections */
+}
